# options-implied-crypto-signals

./: .gitignore  LICENSE  README.md  config.yaml  download_data.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
archive/: polymarket_fetch.py
data/results/: backtest_summary.csv  headline_metrics.csv  walkforward_ETH_D3_24h.csv
notebooks/: 01_data_exploration.ipynb  02_signals.ipynb  03_lead_lag.ipynb  04_event_study.ipynb  05_backtest.ipynb  06_cross_asset.ipynb
src/: backtest.py  binance_fetch.py  cross_asset.py  deribit_fetch.py  event_study.py  lead_lag.py  metrics.py  signals.py
tests/: test_backtest.py  test_event_study.py  test_signals.py
